fix invisible text & tweak

--- a/github-dark.user.css
+++ b/github-dark.user.css
@@ -34927,6 +34927,14 @@
     color: #dcdcdc;
   }
 }
+@-moz-document domain("resources.github.com") {
+  h1, h2, h3, h4, h5, h6 {
+    color: #c6c6c6;
+  }
+  .bg-dots-gray {
+    opacity: .2;
+  }
+}
 @-moz-document domain("stylishthemes.github.io") {
   * {
     box-sizing: border-box;
